ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ideapp-route-websecure
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`ideapp-legal.imim.cat`)
    kind: Rule
    services:
    - name: idea 
      port: 80
      sticky:
        cookie: {}
  tls:
    secretName: imimcat
    namespace: jmcassany
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ideapp-route-web
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`ideapp-legal.imim.cat`)
    kind: Rule
    services:
    - name: idea
      port: 80
    middlewares:
    - name: redirect-scheme
      namespace: traefik
